# tentris

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile-clang  GraphQL_doc.md  HyperTrie.cpp  HyperTrie.hpp  LICENSE  LICENSE-MIT  MapTensor.cpp  MapTensor.hpp  PosCalc.hpp  README.MD  Tensor.hpp  Trie.cpp  Trie.hpp  clang  conanfile.py  conanfile.txt  main.cpp  package.sh  util.cpp  util.hpp
execs/: CMakeLists.txt
execs/tentris-loader/: CMakeLists.txt
execs/tentris-server/: CMakeLists.txt
execs/tools/: CMakeLists.txt
execs/tools/deduplicated-nt/: CMakeLists.txt
execs/tools/rdf2ids/: CMakeLists.txt
libs/endpoint/: CMakeLists.txt
libs/node-store/: CMakeLists.txt
libs/rdf-tensor/: CMakeLists.txt
libs/rdf-tensor/cmake/: version.hpp.in
libs/sparql2tensor/: CMakeLists.txt
libs/tentris/: CMakeLists.txt
libs/tentris/src/dice/: tentris.hpp
libs/triple-store/: CMakeLists.txt
src/: CMakeLists.txt  Main.cpp  util.hpp
src/boolhypertrie/einsum/internal/: CardinalityEstimation.hpp  CartesianOperator.hpp  CountOperator.hpp  Einsum.hpp  Entry.hpp  EntryGeneratorOperator.hpp  JoinOperator.hpp  Operator.hpp  RawSubscript.hpp  ResolveOperator.hpp  Subscript.hpp
src/boolhypertrie/hypertrie/: boolhypertrie.hpp
src/boolhypertrie/hypertrie/internal/: BoolHypertrie.hpp  BoolHypertrie_Hash_Diagonal_impl.hpp  BoolHypertrie_Ordered_Diagonal_impl.hpp  BoolHypertrie_impl.hpp  HashJoin_impl.hpp  Join.hpp  Join_impl.hpp  OrderedJoin_impl.hpp  RawBoolHypertrie.hpp  RawBoolHypertrie_Hash_Diagonal_impl.hpp  RawBoolHypertrie_Ordered_Diagonal_impl.hpp  RawBoolHypertrie_impl.hpp
src/config/: InitialConfig.cpp
src/container/: BinarySearch.hpp  NDMap.hpp  VecMap.hpp  VecSet.hpp
src/einsum/: Einsum.hpp  EinsumPlan.hpp  EvalPlan.hpp  NewSubscript.hpp  ParseTensorExpression.hpp  ShapeCalc.hpp  Subscript.hpp  Types.hpp
src/einsum/operator/: CrossProduct.hpp  Einsum.hpp  Operator.hpp  Result.hpp
src/einsum/util/: UndirectedGraph.hpp
src/exec/: CommandlineEndpoint.cpp  StorageDeamon.cpp  TentrisServer.cpp  TentrisTerminal.cpp  TerminalEndpoint.cpp  VersionStrings.hpp
src/exec/config/: DaemonConfig.hpp  ExecutableConfig.hpp  ServerConfig.hpp  TermStorePointerFilename.hpp  TerminalConfig.hpp
src/exec/tools/: IDs2Hypertrie.cpp  RDF2IDs.cpp  ids2hypertrie.cpp  rdf2ids.cpp
src/hypertrie/: BoolHyperTrie.hpp  Diagonal.hpp  HyperTrie.hpp  HyperTrieDiagonal.hpp  HyperTrieJoin.hpp  HyperTrieJoinIterator.hpp  HyperTrieMatchDim.hpp  HyperTrieMatchKeyPosIterator.hpp  Join.hpp  JoinIterator.hpp  NewJoin.hpp  PosCalc.hpp  Types.hpp
src/lib/tentris/http/: AtomicCleanupTaskGroup.hpp  ChunkedSparqlEndpoint.hpp  GraphQLEndpoint.hpp  GraphQLSchemaEndpoint.hpp  GraphqlEndpoint.hpp  JSONSparqlResultsHeader.hpp  JsonSerializer.hpp  QueryResultState.hpp  RunQuery.hpp  SPARQLEndpoint.hpp  SparqlEndpoint.hpp  TimeoutException.hpp
src/lib/tentris/store/: AtomicGraphQLSchema.hpp  AtomicGraphqlSchema.hpp  AtomicQueryExecutionPackageCache.hpp  AtomicTripleStore.hpp  JsonQueryResult.hpp  JsonQueryResultSAX.hpp  QueryExecutionPackage.hpp  QueryExecutionPackageCache.hpp  SparqlJsonResultSAXWriter.hpp  TripleStore.hpp
src/lib/tentris/tensor/: BoolHypertrie.hpp  Result.hpp
src/lib/tentris/util/: All.hpp  FmtHelper.hpp  HTTPUtils.hpp  LogHelper.hpp  SingletonFactory.hpp  SyncedLRUCache.hpp  SynchronizedCachedFactory.hpp  Types.hpp  UndirectedGraph.hpp
src/lib/tnt/http/: JsonSerializer.hpp  RunQuery.hpp  SPARQLEndpoint.hpp
src/lib/tnt/store/: AtomicTripleStore.hpp  QueryExecutionPackage.hpp  TripleStore.hpp
src/lib/tnt/tensor/: Result.hpp
src/lib/tnt/util/: LogHelper.hpp  SingletonFactory.hpp  (+1 more)
src/store/: Node2Id.hpp  RDFParser.hpp  RDFTerm2Id.hpp  TripleStore.hpp
src/store/RDF/: NTripleParser.hpp  Node.hpp  Term.hpp  TermStore.hpp
src/tensor/: BoolHyperTrieTensor.hpp  CrossProductTensor.hpp  HyperTrieTensor.hpp  MapTensor.hpp  Tensor.hpp  Types.hpp
src/tensor/einsum/: EinsumPlan.hpp  Subscript.hpp
src/tensor/hypertrie/: BoolHyperTrie.hpp  Join.hpp  PosCalc.hpp
src/tnt/config/: Config.cpp
src/tnt/http/: AtomicTripleStore.hpp  Headers.hpp  JSONSparqlResultsHeader.hpp  JsonSerializer.hpp  RunQuery.hpp  SPARQLEndpoint.hpp  StoreInstance.hpp  TimeoutException.hpp  healthCheck.hpp
src/tnt/store/: AtomicTripleStore.hpp  ParsedSPARQLCache.hpp  QueryExecutionPackage.hpp  QueryExecutionPackageCache.hpp  TripleStore.hpp
src/tnt/tensor/: Result.hpp
src/tnt/util/: All.hpp  ArrayHelper.hpp  FmtHelper.hpp  HTTPUtils.hpp  LogHelper.hpp  SingletonFactory.hpp  SycronizedFactory.hpp  SynchronizedCachedFactory.hpp  Types.hpp
src/util/: All.hpp  Enumerate.hpp  ExtendContainerPrint.hpp  ExtendHash.hpp  KeysValues.hpp  Range.hpp  Sort.hpp  Types.hpp  UndirectedGraph.hpp  enum.hpp  range.h
src/util/container/: BinarySearch.hpp  ExtendContainerPrint.hpp  NDMap.hpp  Sort.hpp  VecMap.hpp  VecSet.hpp
src/util/iterables/: Enumerate.hpp  KeysValues.hpp  Zip.hpp
test_fetch_content/: CMakeLists.txt  example.cpp
tests/: BinarySearchTest.cpp  CMakeLists.txt  HyperTrieMatchKeyPosIterator.cpp  TestBoolHyperTrie.cpp  TestCrossProductTensor.cpp  TestDiagonal.cpp  TestEinsum.cpp  TestEvalPlan.cpp  TestGraphQL.cpp  TestGraphQLSchema.cpp  TestGraphqlExecutionPackage.cpp  TestGraphqlParser.cpp  TestGraphqlResponse.cpp  TestHyperTrie.cpp  TestHyperTrieTensor.cpp  TestJoin.cpp  TestMapTensor.cpp  TestNewJoin.cpp  TestPosCalc.cpp  TestRDFNode.cpp  TestRDFParser.cpp  TestSPARQLParser.cpp  TestSubScript.cpp  TestSubscript.cpp  TestTermStore.cpp  TestTripleStore.cpp  TestUndirectedGraph.cpp  Tests.cpp  VecMapTest.cpp  VecSetTest.cpp  clone_googletest.sh
tests/data/: queries.graphql  schema.graphql  test.nt
tests/dataset/: README  sp2b.nt  umlaut.nt
tests/graphql/: TestGraphQLQueryParsing.cpp  TestGraphQLSchema.cpp
tests/ntriplefiles/: ntriples.nt
tests/queries/: DBpedia.txt  sp2b.txt  swdf.txt
tests/query/: COPYING  q-add1.sparql  q02.sparql  q03.sparql  q04.sparql  q05.sparql  q06.sparql  q07.sparql  q08.sparql  q09.sparql  q11.sparql  q12.sparql
(+232 files in other folders)
